06-load-balancing/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-demo-api-dev
  namespace: demo-product
spec:
  selector:
    app: demo-api-dev
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-demo-api
  namespace: demo-product
spec:
  selector:
    app: demo-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
