06-load-balancing/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-product-ingress
  namespace: demo-product
spec:
  routes:
    - kind: Rule
      match: Host(`product.nomadrail.com`)
      services:
        - name: weighted-load-balancing
          namespace: demo-product
          kind: TraefikService
